--- a/restaurant.html
+++ b/restaurant.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
   <title>Restaurant Info</title>
-  <link rel = "icon" href = "img/logo.png"> 
+  <link rel = "icon" href = "img/icon.png"> 
 </head>
 
 <body class="inside">
